# DetectiveSynapse

./: .gitignore  .gitignore copy  Clue_manifest.json  Coverup_plan.json  Execution_plan.json  Master_timeline.json  Narrative.json  Plot.json  Solution.json  Suspect_dossiers.json  requirements.txt  startup.sh
.github/workflows/: main_detectivesynapse.yml
Dsynapse/: .gitignore  README.md  requirement.txt
Dsynapse/src/synapse/crews/briefing_crew/: briefing_crew.py
Dsynapse/src/synapse/utils/: __init__.py  json_cleaner.py
Tools /Object_Storage/: docker-compose.yaml  main.py
Tools /Object_Storage/Object_storage/: base.py  minio_setup.py
src/synapse/: api.py  main.py
src/synapse/crews/briefing_crew/: briefing_crew.py
src/synapse/crews/briefing_crew/config/: tasks.yaml
src/synapse/crews/crime_crew/: crime_crew.py
src/synapse/crews/narrative_crew/: narrative_crew.py
src/synapse/crews/plot_crew/: plot_crew.py
src/synapse/crews/solution_crew/: solution_crew.py
src/synapse/utils/: json_cleaner.py  json_extractor.py  region_generator.py  save_json.py
synapse/: .gitignore  pyproject.toml  requirement.txt  requirements.txt
synapse/src/synapse/: api.py  main.py
synapse/src/synapse/crews/briefing_crew/: briefing_crew.py
synapse/src/synapse/crews/plot_crew/: plot_crew.py
synapse/src/synapse/crews/plot_crew/config/: tasks.yaml
synapse/src/synapse/crews/solution_crew/: solution_crew.py
synapse/src/synapse/crews/solution_crew/config/: agents.yaml  tasks.yaml
synapse/src/synapse/utils/: json_extractor.py  llm.py
(+7 files in other folders)
